[gd_scene load_steps=3 format=3 uid="uid://doyisa4ue0s8s"]

[ext_resource type="Script" path="res://Scenes/Utility/fishing_area.gd" id="1_8qtoj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fshmi"]
size = Vector3(2.92773, 2.79297, 1)

[node name="FishingArea" type="Node3D"]
script = ExtResource("1_8qtoj")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.896484, 0)
shape = SubResource("BoxShape3D_fshmi")

[node name="TextPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -2)

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
